NetBSD Problem Report #46284

From mm_lists@pulsar-zone.net  Fri Mar 30 22:46:43 2012
Return-Path: <mm_lists@pulsar-zone.net>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	by www.NetBSD.org (Postfix) with ESMTP id 6F0E063BEE1
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 30 Mar 2012 22:46:43 +0000 (UTC)
Message-Id: <201203302246.q2UMkpkI028543@ginseng.pulsar-zone.net>
Date: Fri, 30 Mar 2012 18:46:50 -0400
From: Matthew Mondor <mm_lists@pulsar-zone.net>
To: gnats-bugs@gnats.NetBSD.org
Subject: netbsd-6 panic: uarea_system_poolpage_free: failed to free uarea


>Number:         46284
>Category:       kern
>Synopsis:       netbsd-6 panic: uarea_system_poolpage_free: failed to free uarea
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    chs
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Mar 30 22:50:01 +0000 2012
>Closed-Date:    Fri Apr 20 08:40:33 +0000 2012
>Last-Modified:  Fri Apr 20 08:40:33 +0000 2012
>Originator:     Matthew Mondor
>Release:        NetBSD 6.0_BETA
>Organization:
>Environment:
System: NetBSD ninja.xisop 6.0_BETA NetBSD 6.0_BETA (GENERIC_MM) #5: Mon Mar 26 12:50:06 EDT 2012 root@ninja.xisop:/usr/obj/sys/arch/amd64/compile/GENERIC_MM amd64
Architecture: x86_64
Machine: amd64
>Description:


When playing a 2h movie from a DVD using rump_cd9660, the system locked
with the sound DMA buffer replaying endlessly in a loop, and I assumed
it was a panic.  Strangely, my ddb command on enter still didn't work
(call ddb_vgapost) but typing that manually worked, so I could get a
backtrace (manually copied):


breakpoint()
wskbd_translate()
wskbd_cngetc()
db_readline()
db_read_line()
db_command_loop()
db_trap()
kbd_trap()
--- trap (number 1) ---
breakpoint()
vpanic()
printf_nolog()
uarea_system_poolpage_alloc()
pr_pagelist_free()
pool_reclaim()
pool_drain_end()
uvm_pageout()


in dmesg:


panic: uarea_system_poolpage_free: failed to free uarea 0xffff800090bc0000


The trap number 1 and related backtrace above might be due to the
various keys I typed before being able to type "call vga_post" in the
debugger and have it work...


Interestingly, I experience less crashes than before when using
rump_cd9660.  But a number of other bugs have also been fixed since I
started using it on netbsd-6.


>How-To-Repeat:
>Fix:


>Release-Note:


>Audit-Trail:


Responsible-Changed-From-To: kern-bug-people->chs
Responsible-Changed-By: chs@NetBSD.org
Responsible-Changed-When: Mon, 02 Apr 2012 16:30:44 +0000
Responsible-Changed-Why:
caused by my changes to use direct-map uareas on amd64




From: "Chuck Silvers" <chs@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/46284 CVS commit: src/sys/uvm
Date: Fri, 6 Apr 2012 17:16:31 +0000


 Module Name:	src
 Committed By:	chs
 Date:		Fri Apr  6 17:16:30 UTC 2012

 
 Modified Files:
 	src/sys/uvm: uvm_glue.c

 
 Log Message:
 fix uarea_system_poolpage_free() to handle freeing a uarea
 that was not allocated by cpu_uarea_alloc() (ie. on plaforms
 where cpu_uarea_alloc() failing is not fatal).
 fixes PR 46284.

 

 
 To generate a diff of this commit:
 cvs rdiff -u -r1.157 -r1.158 src/sys/uvm/uvm_glue.c

 
 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

 
From: "Jeff Rizzo" <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/46284 CVS commit: [netbsd-6] src/sys/uvm
Date: Mon, 9 Apr 2012 17:58:11 +0000


 Module Name:	src
 Committed By:	riz
 Date:		Mon Apr  9 17:58:11 UTC 2012

 
 Modified Files:
 	src/sys/uvm [netbsd-6]: uvm_glue.c

 
 Log Message:
 Pull up following revision(s) (requested by chs in ticket #167):
 	sys/uvm/uvm_glue.c: revision 1.158
 fix uarea_system_poolpage_free() to handle freeing a uarea
 that was not allocated by cpu_uarea_alloc() (ie. on plaforms
 where cpu_uarea_alloc() failing is not fatal).
 fixes PR 46284.

 

 
 To generate a diff of this commit:
 cvs rdiff -u -r1.156.2.1 -r1.156.2.2 src/sys/uvm/uvm_glue.c

 
 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

 
State-Changed-From-To: open->feedback
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Fri, 13 Apr 2012 01:11:15 +0000
State-Changed-Why:
Fixed?




From: Matthew Mondor <mm_lists@pulsar-zone.net>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: kern/46284 (netbsd-6 panic: uarea_system_poolpage_free: failed
 to free uarea)
Date: Sat, 14 Apr 2012 21:28:25 -0400


 On Fri, 13 Apr 2012 01:11:16 +0000 (UTC)
 dholland@NetBSD.org wrote:

 
 > Synopsis: netbsd-6 panic: uarea_system_poolpage_free: failed to free uarea
 > 
 > State-Changed-From-To: open->feedback
 > State-Changed-By: dholland@NetBSD.org
 > State-Changed-When: Fri, 13 Apr 2012 01:11:15 +0000
 > State-Changed-Why:
 > Fixed?

 
 I think so.  Crashes have been rare enough that I cannot directly
 reproduce it, but I use netbsd-6 with this fix without new issues.

 
 Thanks,
 -- 
 Matt

 
State-Changed-From-To: feedback->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Fri, 20 Apr 2012 08:40:33 +0000
State-Changed-Why:
We believe it to be fixed.




>Unformatted:

 



NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.36 2007/11/24 03:27:39 kano Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.